spacing Fixes - filling content - instagram shadow Fix - added to tools and qualifications

--- a/Assets/styles.css
+++ b/Assets/styles.css
@@ -5,7 +5,13 @@ body {
   font-family: verdana, sans-serif;
   background-color: #2A2550;
 }
+.skillsp {
+  margin-bottom: 50px;
+}
 
+.myskills {
+  margin-bottom: 35px;
+}
 header {
   width: 100%;
   height: 70px;
@@ -69,7 +75,9 @@ header {
   margin-top: -10px;
   margin-bottom: 10px;
   border-color: #FF7700;
-  box-shadow: 0 0 8px #ff7700;
+  -webkit-filter: drop-shadow(0px 0px 8px #ff7700);
+  filter: drop-shadow(0px 0px 8px #ff7700);
+  /* box-shadow: 0 0 8px #ff7700; */
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Proza+Libre&family=Roboto:ital,wght@0,100;1,900&display=swap');
@@ -85,6 +93,7 @@ h1{
 
 h2 {
   color: #E04D01;
+  font-size: 200%;
   font-family: 'montserrat',sans-serif;
 }
 
